# mws

./: .gitignore  Notes.md  README.md  pyproject.toml  requirements.txt
modeling_work_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mws/: config.py
mws/modeling_work_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mws/models/: autoencoder.py  basedetector.py  isolation_forest_detector.py  sparseautoencoder.py  zscoredetector.py
mws/pipeline/: pipeline.py  pipeline_spec.py
mws/preprocessing/: load_data.py  load_data_add.py  load_data_first.py  preprocessing.py  scaler.py
mws/training/: experiment_new.py  metrics.py  thresholding.py  trainer.py
tests/: check_versions.py  test_all_metods.py  test_experiments.py  test_split_data_by_engine.py  test_user.py  test_user_engine.py
